docs: changes while translating
A bit more while translating

--- a/docs/src/code/building-linuxcnc.adoc
+++ b/docs/src/code/building-linuxcnc.adoc
@@ -135,7 +135,7 @@ Non-realtime::
   but it is useful for simulating the execution of G-code and for testing the non-realtime parts of the system
   (such as the user interfaces, and some kinds of components and device drivers). +
   To make use of the realtime capabilities of LinuxCNC, certain parts of LinuxCNC need to run with root privileges.
-  To enable root for these parts, run this extra command after the `make` that builds LinuxCNC: +
+  To enable root for these parts, run this extra command after the `make` that builds LinuxCNC:
 -----
 $ sudo make setuid
 -----
