--- a/docs/src/gui/gladevcp.adoc
+++ b/docs/src/gui/gladevcp.adoc
@@ -201,7 +201,7 @@ Older versions will not work, you will get a Python error.
 
 This section just outlines the initial LinuxCNC-specific steps.
 For more information and a tutorial on Glade, see http://glade.gnome.org.
-Some Glade tips & tricks may also be found on https://www.youtube.com[youtube].
+Some Glade tips & tricks may also be found on https://www.youtube.com[YouTube].
 
 Either modify an existing UI component by running +glade <file>.ui+ or start a new one by just running the +glade+ command from the shell.
 
