--- a/docs/src/gui/qtdragon.adoc
+++ b/docs/src/gui/qtdragon.adoc
@@ -552,7 +552,7 @@ qtversaprobe.backoffdist
 ----
 
 This pin will be true when the loaded tool equals the number set in the Versa Probe tool number in the preference file. +
-It can be used (for example) to inhibit the spindle when the probe is loaded by connecting it to spindle.0.inhibit.
+It can be used (for example) to inhibit the spindle when the probe is loaded by connecting it to `spindle.0.inhibit`.
 
 [source,{hal}]
 ----
@@ -561,7 +561,7 @@ qtversaprobe.probe-loaded
 
 This output pin is available when setting the Basic Probe INI option. +
 This pin will be true when the loaded tool equals the number set in the Basic Probe tool number edit box. +
-It can be used (for example) to inhibit the spindle when the probe is loaded by connecting it to spindle.0.inhibit.
+It can be used (for example) to inhibit the spindle when the probe is loaded by connecting it to `spindle.0.inhibit`.
 
 [source,{hal}]
 ----
@@ -613,14 +613,14 @@ The spindle will lower when you close that dialog. +
 The amount to raise is set in the 'Settings' tab under the heading 'SPINDLE RAISE'. +
 This line edit box can only be directly set when not in Auto mode. +
 The up/down buttons can be used to adjust the raise amount at any time, including when the spindle is already raised. +
-The button increments are 1 inch or 5 mm (depending on the units the machine is based on) +
+The button increments are 1 inch or 5 mm (depending on the units the machine is based on).
 
-{NOTE}
+[NOTE]
 If using the Spindle lift option, HALUI can not be used to pause/resume the program.
 There is a pin, 'QtDragon.external-pause' available to pause/resume from an external source.
 You must also enable external offsets. In the setting tab check 'use external offsets'
-If you wish to inhibit the spindle when a probe tool is loaded, you will need to use an logical `or` component
-to combine the two spindle inhibit signals to connect to spindle.0.inhibit.
+If you wish to inhibit the spindle when a probe tool is loaded,
+you will need to use an logical `or`-component to combine the two spindle inhibit signals to connect to `spindle.0.inhibit`. 
 
 This optional behaviour requires additions to the INI and the QtDragon_postgui HAL file.
 
@@ -946,7 +946,7 @@ This feature assumes the use of two probes in concert:
  . A tool switch sensor, fixed somewhere on the machine (sometimes called a tool-setter), and
  . A spindle probe that is installed temporarily at the beginning of the job (sometimes called an xyz probe or a Renishaw probe).
 
-These techniques are useful for machines that do not have repeatable tool holders and do not have automatic tool changing devices. (For machines with repeatable tool holders, see the section on <<sub:touch-plate,measuring tool length>>. For machines with automatic tool changing devices, consult work done under the linuxcnc repository at configs/sim/axis/remap/rack-toolchange)
+These techniques are useful for machines that do not have repeatable tool holders and do not have automatic tool changing devices. (For machines with repeatable tool holders, see the section on <<sub:touch-plate,measuring tool length>>. For machines with automatic tool changing devices, consult work done under the linuxcnc repository at configs/sim/axis/remap/rack-toolchange .)
 
 To use this feature, you will need to do some additional settings and you may want to use the offered HAL pins to get values in your own ngc remap procedure. Those settings are covered later in the section.
 
@@ -956,13 +956,13 @@ First, this document covers how to use this technique. Second, this document cov
 
 A detailed workflow walkthrough follows this overview.
 
+Setup steps include:
+
+* Entering the probe velocities on the versa probe settings page.
+* Enabling "Use Tool Measurement" on the Versa Probe tab. 
+* Enabling "Use Tool Sensor" under Settings.
+
 [IMPORTANT]
-Setup steps include: +
- +
-Entering the probe velocities on the versa probe settings page. +
-Enabling "Use Tool Measurement" on the Versa Probe tab. +
-Enabling "Use Tool Sensor" under Settings. +
- +
 When fist setting up auto tool measurement, please use caution until you confirm tool change and probe locations - it is easy to break a tool/probe. Abort will be honoured while the probe is in motion.
 
 Tool Measurement in QtDragon is organized into the following steps which will be explained in more detail in the following section:
@@ -1378,7 +1378,7 @@ It is possible to create translation files for QtDragon to display in the langua
 
 To create and or edit a translation file requires that LinuxCNC has been installed as run in place.
 
-The following assumes that the linuxcnc git directory is ~/linuxcnc-dev.
+The following assumes that the LinuxCNC git directory is ~/linuxcnc-dev.
 
 [NOTE]
 If using QtDragon_hd substitute 'qtdragon_hd' for 'qtdragon'
