--- a/docs/src/hal/comp.adoc
+++ b/docs/src/hal/comp.adoc
@@ -358,7 +358,7 @@ The details of `struct __comp_state` and these macros may change from one versio
 * `FUNCTION(`__name__`)` - Use this macro to begin the definition of a realtime function, which was previously declared with 'function NAME'.
   The function includes a parameter 'period' which is the integer number of nanoseconds between calls to the function.
 * `EXTRA_SETUP()` - Use this macro to begin the definition of the function called to perform extra setup of this instance.
-  Return a negative Unix 'errno' value to indicate failure (e.g., 'return -EBUSY' on failure to reserve an I/O port), or 0 to indicate success.
+  Return a negative UNIX 'errno' value to indicate failure (e.g., 'return -EBUSY' on failure to reserve an I/O port), or 0 to indicate success.
 * `EXTRA_CLEANUP()` - Use this macro to begin the definition of the function called to perform extra cleanup of the component.
   Note that this function must clean up all instances of the component, not just one.
   The "pin_name", "parameter_name", and "data" macros may not be used here.
@@ -595,7 +595,8 @@ pin out float example;
 
 This fragment of a component illustrates the use of the 'hal_' prefix in a component name.
 
-`loop` is a common name, and the `hal_` prefix avoids potential name collisions with other unrelated software.  For example, on RTAI realtime systems realtime code runs in the kernel, so if the component were named just `loop` it could easily conflict with the standard `loop` kernel module.
+`loop` is a common name, and the `hal_` prefix avoids potential name collisions with other unrelated software.
+For example, on RTAI realtime systems realtime code runs in the kernel, so if the component were named just `loop` it could easily conflict with the standard `loop` kernel module.
 
 When loaded, 'halcmd show comp' will show a component called 'hal_loop'.
 However, the pin shown by 'halcmd show pin' will be 'loop.0.example', not 'hal-loop.0.example'.
