--- a/docs/src/man/man1/5axisgui.1.adoc
+++ b/docs/src/man/man1/5axisgui.1.adoc
@@ -6,14 +6,14 @@
 
 == DESCRIPTION
 
-*5axisgui* is one of the sample *Vismach* GUIs for LinuxCNC
+*5axisgui* is one of the sample *Vismach* GUIs for LinuxCNC.
 
 == SEE ALSO
 
 linuxcnc(1)
 
-See the main LinuxCNC documentation for more details.
-https://linuxcnc.org/docs/html/gui/vismach.html
+See the main LinuxCNC documentation for more details at
+https://linuxcnc.org/docs/html/gui/vismach.html.
 
 Much more information about LinuxCNC and HAL is available in the
 LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
