--- a/docs/src/man/man1/iov2.1.adoc
+++ b/docs/src/man/man1/iov2.1.adoc
@@ -28,7 +28,7 @@ Whether *io* or *iov2* is used can be chosen in the [EMCIO] section of the INI f
 *iocontrol.0.coolant-mist* (Bit, Out)::
   TRUE when mist coolant is requested.
 *iocontrol.0.emc-enable-in* (Bit, In)::
-  Should be driven FALSE when an external estop condition exists.
+  Should be driven FALSE when an external E-stop condition exists.
 *iocontrol.0.tool-change* (Bit, Out)::
   TRUE when a tool change is requested.
 *iocontrol.0.tool-changed* (Bit, In)::
@@ -45,44 +45,43 @@ Whether *io* or *iov2* is used can be chosen in the [EMCIO] section of the INI f
 *iocontrol.0.tool-prepared* (Bit, In)::
   Should be driven TRUE when a tool prepare is completed.
 *iocontrol.0.user-enable-out* (Bit, Out)::
-  FALSE when an internal estop condition exists.
+  FALSE when an internal E-stop condition exists.
 *iocontrol.0.user-request-enable* (Bit, Out)::
-  TRUE when the user has requested that estop be cleared.
+  TRUE when the user has requested that E-stop be cleared.
 
 === Additional IO v2 pins
 
-*iocontrol.0.emc-abort* (BIT,OUT)::
+*iocontrol.0.emc-abort* (Bit, Out)::
   Signals emc-originated abort to toolchanger.
-*iocontrol.0.emc-abort-ack* (BIT,IN)::
-  Acknowledge line from toolchanger for previous signal, or
-  jumpered to abort-tool-change if not used in toolchanger. NB: after
-  signaling an emc-abort, iov2 will block until emc-abort-ack is raised.
-*iocontrol.0.emc-reason* (S32,OUT)::
+*iocontrol.0.emc-abort-ack* (Bit, In)::
+  Acknowledge line from toolchanger for previous signal,
+  or jumpered to abort-tool-change if not used in toolchanger.
+  NB: after signaling an emc-abort, iov2 will block until emc-abort-ack is raised.
+*iocontrol.0.emc-reason* (S32, Out)::
   Convey cause for EMC-originated abort to toolchanger.
   Usage: UI informational. Valid during emc-abort True.
-*iocontrol.0.start-change* (BIT,OUT)::
+*iocontrol.0.start-change* (Bit, Out)::
   Asserted at the very beginning of an M6 operation, before any spindle-off,
   quill-up, or move-to-toolchange-position operations are executed.
-*iocontrol.0.start-change-ack* (BIT,IN)::
+*iocontrol.0.start-change-ack* (Bit, In)::
   Acknowledgment line for start-change.
-*iocontrol.0.toolchanger-fault* (BIT,IN)::
-  Toolchanger signals fault. This line is contionuously
-  monitored. A fault toggles a flag in iocontrol which is reflected in
-  the toolchanger-faulted pin.
-*iocontrol.0.toolchanger-fault-ack* (BIT,OUT)::
+*iocontrol.0.toolchanger-fault* (Bit, In)::
+  Toolchanger signals fault. This line is contionuously monitored.
+  A fault toggles a flag in iocontrol which is reflected in the toolchanger-faulted pin.
+*iocontrol.0.toolchanger-fault-ack* (Bit, Out)::
   Handshake line for above signal. Will be set by iov2 after
-  above fault line True is recognized and deasserted when
-  toolchanger-fault drops. Toolchanger is free to interpret the ack;
+  above fault line True is recognized and deasserted when toolchanger-fault drops.
+  Toolchanger is free to interpret the ack;
   reading the -ack lines assures fault has been received and acted upon.
-*iocontrol.0.toolchanger-reason* (S32,IN)::
-  Convey reason code for toolchanger-originated fault to iov2.  Usage
-*iocontrol.0.toolchanger-faulted* (BIT,OUT)::
+*iocontrol.0.toolchanger-reason* (S32, In)::
+  Convey reason code for toolchanger-originated fault to iov2.
+*iocontrol.0.toolchanger-faulted* (Bit, Out)::
   Signals toolchanger-notify line has toggled and
   toolchanger-reason-code was in the fault range. Next M6 will abort.
-*iocontrol.0.toolchanger-clear-fault* (BIT,IN)::
+*iocontrol.0.toolchanger-clear-fault* (Bit, In)::
   Resets TC fault condition. Deasserts toolchanger-faulted if toolchanger-notify is line False.
   Usage: UI - e.g. clear fault condition button.
-*iocontrol.0.state* (S32,OUT)::
+*iocontrol.0.state* (S32, Out)::
   Debugging pin reflecting internal state.
 
 See
